xine-lib (0.9.12-1) unstable; urgency=low

  * new upstream release
    (only small improvements, see upstream ChangeLog)

 -- Siggi Langauf <siggi@debian.org>  Sat, 22 Jun 2002 18:44:48 +0200

xine-lib (0.9.11-1) unstable; urgency=low

  * new upstream release
    - pads Xv images, so width % 4 == 0 (closes: #134997)
  
 -- Siggi Langauf <siggi@debian.org>  Thu, 20 Jun 2002 00:11:37 +0200

xine-lib (0.9.10-2) unstable; urgency=high

  * disabled machine specific optimizations, so autobuilders will
    build packages than run on their whole processor family (closes: #148414)

 -- Siggi Langauf <siggi@debian.org>  Wed, 29 May 2002 10:06:09 +0200

xine-lib (0.9.10-1) unstable; urgency=low

  * new upstream release
    * uses new logo mechanism (closes: #145483)
    * after long fights using sane SONAME (closes: #145668, #148099)
    * safer check and bigger buffer in xine_get_homedir() (closes: #133550)
    (see upstream ChangeLog for further highlights)
  * build-depends on libz-dev (closes: #14562)
  * libxine-dev depends on slang1-dev (closes: #140842)
  * removed references to (never released, long obsolete) xine packages

 -- Siggi Langauf <siggi@debian.org>  Sun, 26 May 2002 00:00:14 +0200

xine-lib (0.9.9-2) unstable; urgency=low

  * using LIBRARY_PATH to complete circular linking during install
    (closes: #145348)

 -- Siggi Langauf <siggi@debian.org>  Thu,  2 May 2002 05:06:06 +0200

xine-lib (0.9.9-1) unstable; urgency=low

  * new upstream release
  * downgraded ogg/vorbis dependancies to recommendations (closes: #130492)
  * made resetting volume an option, disabled by default (closes: #127485)

 -- Siggi Langauf <siggi@debian.org>  Mon, 28 Jan 2002 10:54:14 +0100

xine-lib (0.9.8-2) unstable; urgency=high

  * including version in shlibs file, so shlibdeps will work

 -- Siggi Langauf <siggi@debian.org>  Sat, 19 Jan 2002 16:20:32 +0100

xine-lib (0.9.8-1) unstable; urgency=high

  * new upstream release
