@@ -2,8 +2,9 @@ xine-lib (0.9.12-1) unstable; urgency=low
 
   * new upstream release
     (only small improvements, see upstream ChangeLog)
+  * moved locale files from libxine-dev to the libxine0
 
- -- Siggi Langauf <siggi@debian.org>  Sat, 22 Jun 2002 18:44:48 +0200
+ -- Siggi Langauf <siggi@debian.org>  Sun, 23 Jun 2002 11:33:37 +0200
 
 xine-lib (0.9.11-1) unstable; urgency=low
 
